fixed : figcaption => adjust margin top only when wrapped inside .wp-caption. fixes #607

--- a/assets/front/scss/_wpspecifics.scss
+++ b/assets/front/scss/_wpspecifics.scss
@@ -2,7 +2,7 @@
 // WordPress Specifics
 //
 [data-sek-level="module"] .sek-module-inner {
-  figcaption, .wp-caption {
+   .wp-caption figcaption {
     color: #6d6d6d;
     font-style: italic;
     max-width: 100%;
